# ppl.llm.serving

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/ISSUE_TEMPLATE/: issue.md
cmake/: deps.cmake  grpc_serving.cmake  install.cmake  llama.cmake  llm.cmake  pplllmserving-config.cmake.in  sentencepiece.cmake  xxhash.cmake
docs/: llama_guide.md
samples/integration-cuda/: CMakeLists.txt  main.cc
server/: llm_server.cc
src/backends/cuda/: post_processor.cc  post_processor.h  resource_manager.cc  resource_manager.h  sampler.cc  sampler.h
src/common/: config.cc  config.h  connection.h  post_processor.h  processor.h  profiler.cc  profiler.h  request.h  resource.h  response.h  server.h
src/engine/: llm_engine.cc  llm_engine.h
src/generator/: llm_generator.cc  llm_generator.h
src/models/: config.h  factory.cc  factory.h  resource.h
src/models/baichuan/: README.md  baichuan_tokenizer.h
src/models/internlm/: README.md  internlm_tokenizer.h  internlm_worker.cc  internlm_worker.h
src/models/internlm/conf/: internlm_13b_config_example.json  internlm_7b_config_example.json
src/models/llama/: README.md  llama_server.cc  llama_tokenizer.h  llama_worker.cc  llama_worker.h  resource.h
src/models/llama/conf/: README.md  llama_13b_config_example.json  llama_65b_config_example.json  llama_7b_config_example.json
src/sampler/: sampler.h
src/sampler/cuda/: sampler.cc  sampler.h
src/serving/: grpc_server.cc  grpc_server.h
src/serving/grpc/: grpc_server.cc  grpc_server.h
src/serving/grpc/proto/: llm.proto
src/serving/proto/: llm.proto
src/tokenizer/: baichuan_tokenizer.h  internlm_tokenizer.h  tokenizer.h  tokenizer_baichuan.h  tokenizer_factory.h  tokenizer_impl.h  tokenizer_impl_hf.h  tokenizer_impl_sp.h  tokenizer_internlm.h  tokenizer_llama.h
src/tokenizer/models/baichuan/: baichuan_tokenizer.h
src/tokenizer/models/internlm/: internlm_tokenizer.h
src/tokenizer/models/llama/: llama_tokenizer.h
src/tokenizer/models/llama3/: llama3_tokenizer.h  tokenizer_config.json
src/utils/: config_utils.cc  config_utils.h  index_manager.h  mpsc_request_scheduler.h  prefix_cache_manager.h  profiling_utils.cc  profiling_utils.h  queue_request_scheduler.h  sampler.h  tokenizer.h  utils.cc  utils.h
test/: CMakeLists.txt  test_prefix_cache_mgr.cc
tools/: CMakeLists.txt  backtrace.h  benchmark_prefix_cache_offline.cc  client_pressure.cc  client_qps_measure.cc  client_qps_measure_token_in_out.cc  client_sample.cc  client_sample_token_in_out.cc  client_valide.cc  llm_server.cc  offline_inference.cc  pressure_test.sh  samples_1024.json  samples_2048.json
